--- a/COOP/COOP.vcxproj
+++ b/COOP/COOP.vcxproj
@@ -155,7 +155,7 @@
     <ClInclude Include="ObjectBaseStructs.h" />
     <ClInclude Include="ObjectLifecycleManagement.h" />
     <ClInclude Include="RedBlackTree.h" />
-    <ClInclude Include="Shared_ptr.h" />
+    <ClInclude Include="SharedPodPtr.h" />
     <ClInclude Include="UnitTestsInfra.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="VirtualFuncCalling.h" />
@@ -168,7 +168,7 @@
     <ClCompile Include="GenericTensor.c" />
     <ClCompile Include="ObjectLifecycleManagement.c" />
     <ClCompile Include="RedBlackTree.c" />
-    <ClCompile Include="Shared_ptr.c" />
+    <ClCompile Include="SharedPodPtr.c" />
     <ClCompile Include="Vector.c" />
     <ClCompile Include="VirtualFuncCalling.c" />
   </ItemGroup>
