--- a/UnitTestC/UnitTestC.vcxproj
+++ b/UnitTestC/UnitTestC.vcxproj
@@ -160,7 +160,7 @@
     <ClCompile Include="_RUNNER_.c" />
     <ClCompile Include="ScopesUnitTest.c" />
     <ClCompile Include="ScopeTester.c" />
-    <ClCompile Include="vectorUnitTest.c" />
+    <ClCompile Include="VectorUnitTest.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseClassExample.h" />
@@ -175,7 +175,7 @@
     <ClInclude Include="ScopesUnitTest.h" />
     <ClInclude Include="ScopeTester.h" />
     <ClInclude Include="shared_ptr_test.h" />
-    <ClInclude Include="vectorUnitTest.h" />
+    <ClInclude Include="VectorUnitTest.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\COOP\COOP.vcxproj">
