--- a/UnitTestC/UnitTestC.vcxproj
+++ b/UnitTestC/UnitTestC.vcxproj
@@ -148,7 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BaseClassExample.c" />
-    <ClCompile Include="shared_ptr_test.c" />
+    <ClCompile Include="SharedPodPtrUnitTest.c" />
     <ClCompile Include="DemoClassTest.c" />
     <ClCompile Include="DerivedClassExample.c" />
     <ClCompile Include="ExeptionUnitTest.c" />
@@ -174,7 +174,7 @@
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="ScopesUnitTest.h" />
     <ClInclude Include="ScopeTester.h" />
-    <ClInclude Include="shared_ptr_test.h" />
+    <ClInclude Include="SharedPodPtrUnitTest.h" />
     <ClInclude Include="VectorUnitTest.h" />
   </ItemGroup>
   <ItemGroup>
