--- a/COOP/COOP.vcxproj
+++ b/COOP/COOP.vcxproj
@@ -143,39 +143,33 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="InMemoryCache.h" />
-    <ClInclude Include="class_def_macros.h" />
+    <ClInclude Include="ClassDefMacros.h" />
     <ClInclude Include="COOP.h" />
-    <ClInclude Include="dynamic_memory_management.h" />
+    <ClInclude Include="DynamicMemoryManagement.h" />
     <ClInclude Include="ExportDefs.h" />
-    <ClInclude Include="hashTable.h" />
     <ClInclude Include="HeapCache.h" />
-    <ClInclude Include="iCache.h" />
-    <ClInclude Include="inheritence_def_macros.h" />
-    <ClInclude Include="Ndarray.h" />
-    <ClInclude Include="object.h" />
-    <ClInclude Include="obj_base_structs.h" />
-    <ClInclude Include="obj_lifecycle_management.h" />
-    <ClInclude Include="redBlackTree.h" />
-    <ClInclude Include="redBlackTreeIterator.h" />
-    <ClInclude Include="Shared_ptr.h" />
+    <ClInclude Include="ICache.h" />
+    <ClInclude Include="InheritenceDefMacros.h" />
+    <ClInclude Include="MathUtils.h" />
+    <ClInclude Include="Tensor.h" />
+    <ClInclude Include="Object.h" />
+    <ClInclude Include="ObjectBaseStructs.h" />
+    <ClInclude Include="ObjectLifecycleManagement.h" />
+    <ClInclude Include="SharedPodPtr.h" />
+    <ClInclude Include="UnitTestsInfra.h" />
     <ClInclude Include="Vector.h" />
-    <ClInclude Include="vectorIterator.h" />
-    <ClInclude Include="virtual_func_calling.h" />
+    <ClInclude Include="VirtualFuncCalling.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="InMemoryCache.c" />
-    <ClCompile Include="dynamic_memory_management.c" />
-    <ClCompile Include="hashTable.c" />
+    <ClCompile Include="DynamicMemoryManagement.c" />
     <ClCompile Include="HeapCache.c" />
-    <ClCompile Include="iCache.c" />
-    <ClCompile Include="Ndarray.c" />
-    <ClCompile Include="obj_lifecycle_management.c" />
-    <ClCompile Include="redBlackTree.c" />
-    <ClCompile Include="redBlackTreeIterator.c" />
-    <ClCompile Include="Shared_ptr.c" />
+    <ClCompile Include="ICache.c" />
+    <ClCompile Include="Tensor.c" />
+    <ClCompile Include="ObjectLifecycleManagement.c" />
+    <ClCompile Include="SharedPodPtr.c" />
     <ClCompile Include="Vector.c" />
-    <ClCompile Include="vectorIterator.c" />
-    <ClCompile Include="virtual_func_calling.c" />
+    <ClCompile Include="VirtualFuncCalling.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
