--- a/COOP/COOP.vcxproj
+++ b/COOP/COOP.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="ICache.h" />
     <ClInclude Include="InheritenceDefMacros.h" />
     <ClInclude Include="MathUtils.h" />
+    <ClInclude Include="SharedObjPtr.h" />
     <ClInclude Include="Tensor.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="ObjectBaseStructs.h" />
@@ -165,6 +166,7 @@
     <ClCompile Include="DynamicMemoryManagement.c" />
     <ClCompile Include="HeapCache.c" />
     <ClCompile Include="ICache.c" />
+    <ClCompile Include="SharedObjPtr.c" />
     <ClCompile Include="Tensor.c" />
     <ClCompile Include="ObjectLifecycleManagement.c" />
     <ClCompile Include="SharedPodPtr.c" />
