--- a/UnitTestC/UnitTestC.vcxproj
+++ b/UnitTestC/UnitTestC.vcxproj
@@ -149,6 +149,8 @@
   <ItemGroup>
     <ClCompile Include="BaseClassExample.c" />
     <ClCompile Include="CodeBlocksUnitTest.c" />
+    <ClCompile Include="RedBlackTreeIterUnitTest.c" />
+    <ClCompile Include="RedBlackTreeUnitTest.c" />
     <ClCompile Include="SharedPodPtrUnitTest.c" />
     <ClCompile Include="DemoClassTest.c" />
     <ClCompile Include="DerivedClassExample.c" />
@@ -171,6 +173,8 @@
     <ClInclude Include="InheritanceTest.h" />
     <ClInclude Include="MemManagementUnitTest.h" />
     <ClInclude Include="Rectangle.h" />
+    <ClInclude Include="RedBlackTreeIterUnitTest.h" />
+    <ClInclude Include="RedBlackTreeUnitTest.h" />
     <ClInclude Include="ScopesUnitTest.h" />
     <ClInclude Include="ScopeTester.h" />
     <ClInclude Include="SharedPodPtrUnitTest.h" />
