--- a/COOP/COOP.vcxproj.filters
+++ b/COOP/COOP.vcxproj.filters
@@ -55,6 +55,8 @@
       <Filter>Infra</Filter>
     </ClInclude>
     <ClInclude Include="SharedObjPtr.h" />
+    <ClInclude Include="Iterator.h" />
+    <ClInclude Include="IteratorQueue.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="InMemoryCache.c">
@@ -79,5 +81,7 @@
       <Filter>Infra</Filter>
     </ClCompile>
     <ClCompile Include="SharedObjPtr.c" />
+    <ClCompile Include="Iterator.c" />
+    <ClCompile Include="IteratorQueue.c" />
   </ItemGroup>
 </Project>
