changes in List.h List.c #27

--- a/COOP/CMakeLists.txt
+++ b/COOP/CMakeLists.txt
@@ -52,7 +52,7 @@ set(ALL_FILES
 ################################################################################
 # Target
 ################################################################################
-add_library(${PROJECT_NAME} STATIC ${ALL_FILES})
+add_library(${PROJECT_NAME} STATIC ${ALL_FILES} "Iterator.h" "Iterator.c")
 
 set(ROOT_NAMESPACE COOP)
 
