Fixing BinaryTree.c and adding Tests for Binary Tree #28

--- a/COOP/CMakeLists.txt
+++ b/COOP/CMakeLists.txt
@@ -12,6 +12,8 @@ set(no_group_source_files
     "Tensor.h"
     "Vector.c"
     "Vector.h"
+    "Iterator.c"  
+    "Iterator.h"  
 )
 source_group("" FILES ${no_group_source_files})
 
